# codeagent-sandbox

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  fs-watcher-plan.md  p9-implementation-plan.md  project-plan.md  testing-plan.md  winfsp-mount-plan.md
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/control/: Cargo.toml
crates/control/src/: error.rs  handler.rs  in_flight.rs  lib.rs  parser.rs  protocol.rs  state_machine.rs
crates/control/tests/: control_channel.rs  control_channel_integration.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: constants.rs  jsonl_client.rs  lib.rs  mcp_client.rs  messages.rs
crates/e2e-tests/tests/: pjdfstest_subset.rs  safeguard_flow.rs  session_lifecycle.rs  undo_roundtrip.rs
crates/interceptor/: Cargo.toml
crates/interceptor/benches/: manifest_io.rs  preimage_capture.rs  rollback_restore.rs
crates/interceptor/src/: barrier.rs  gitignore.rs  history.rs  lib.rs  manifest.rs  preimage.rs  resource_limits.rs  rollback.rs  safeguard.rs  step_tracker.rs  undo_interceptor.rs  write_interceptor.rs
crates/interceptor/tests/: gitignore.rs  proptest_model.rs  resource_limits.rs  safeguards.rs  symlink_policy.rs  undo_barriers.rs  undo_interceptor.rs  wal_crash_recovery.rs
crates/interceptor/tests/common/: mod.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: error.rs  lib.rs  parser.rs  path_validation.rs  protocol.rs  router.rs  server.rs
crates/mcp/tests/: mcp_server.rs
crates/p9/: Cargo.toml
crates/p9/src/: error.rs  fid.rs  lib.rs  messages.rs  qid.rs  server.rs  wire.rs
crates/p9/src/operations/: attr.rs  dir.rs  file.rs  link.rs  mod.rs  session.rs  walk.rs
crates/p9/src/platform/: mod.rs  unix.rs  windows.rs
crates/p9/tests/: interceptor_integration.rs  server_operations.rs  windows_normalization.rs  wire_protocol.rs
crates/p9proxy/: Cargo.toml
crates/p9proxy/src/: main.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: claude_settings.rs  cli.rs  command_classifier.rs  command_waiter.rs  config.rs  control_bridge.rs  error.rs  event_bridge.rs  fs_backend.rs  fs_watcher.rs  lib.rs  main.rs  orchestrator.rs  qemu.rs  recent_writes.rs  safeguard_bridge.rs  session.rs  singleton.rs  socket_server.rs  step_adapter.rs  tray.rs
crates/sandbox/tests/: command_pipeline.rs  fs_watcher.rs  orchestrator.rs  undo_history.rs
crates/shim/: Cargo.toml
crates/shim/src/: error.rs  executor.rs  lib.rs  main.rs  output_buffer.rs
crates/shim/tests/: shim_integration.rs
crates/stdio/: Cargo.toml
crates/stdio/src/: error.rs  lib.rs  parser.rs  path_validation.rs  protocol.rs  router.rs  server.rs  version.rs
crates/stdio/tests/: stdio_api.rs
crates/test-support/: Cargo.toml
crates/test-support/benches/: snapshot_capture.rs
crates/test-support/src/: fixtures.rs  lib.rs  snapshot.rs  workspace.rs
crates/virtiofs-backend/: Cargo.toml
crates/virtiofs-backend/src/: daemon.rs  error.rs  inode_map.rs  intercepted_fs.rs  lib.rs
crates/virtiofs-backend/tests/: filesystem_backend.rs
crates/virtiofsd-fork/: Cargo.toml
crates/virtiofsd-fork/src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  fuse.rs  idmap.rs  lib.rs  limits.rs  oslib.rs  read_dir.rs  sandbox.rs  seccomp.rs  server.rs  util.rs  vhost_user.rs
crates/virtiofsd-fork/src/compat/: credentials.rs  fd_ops.rs  io_ops.rs  mod.rs  os_facts.rs  rename_ops.rs  stat_ops.rs  types.rs
crates/virtiofsd-fork/src/passthrough/: credentials.rs  file_handle.rs  guest_fd_limit.rs  inode_store.rs  mod.rs  mount_fd.rs  read_only.rs  stat.rs  util.rs
crates/virtiofsd-fork/src/passthrough/device_state/: deserialization.rs  mod.rs  serialization.rs  serialized.rs
crates/virtiofsd-fork/src/passthrough/device_state/preserialization/: file_handles.rs  find_paths.rs  mod.rs  proc_paths.rs
crates/virtiofsd-fork/src/soft_idmap/: cmdline.rs  id_types.rs  mod.rs
crates/vmm-sys-util-fork/: Cargo.toml
crates/vmm-sys-util-fork/src/: errno.rs  fam.rs  lib.rs  metric.rs  rand.rs  tempfile.rs
crates/vmm-sys-util-fork/src/linux/: epoll.rs  eventfd.rs  mod.rs  sock_ctrl_msg.rs
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: copy-sidecar.cjs  copy-sidecar.sh  generate-icon.mjs
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  lib.rs  main.rs  paths.rs
desktop/src-tauri/src/commands/: claude.rs  config.rs  mod.rs  system.rs  tools.rs  undo.rs  vm.rs
desktop/src-tauri/windows/: hooks.nsh
desktop/src/components/: Layout.tsx  Toast.tsx
desktop/src/components/tabs/: ClaudeIntegration.tsx  GuestTools.tsx  SandboxConfig.tsx  Terminal.tsx  UndoHistory.tsx  VmManager.tsx
desktop/src/hooks/: useClaudeConfigSync.ts  useDebugConsole.ts  useLayoutStore.ts  useSandboxConfig.ts  useTerminal.ts  useToastStore.ts  useToolsStore.ts  useUndoHistory.ts  useVmStatus.ts
desktop/src/lib/: mcpEntry.ts  types.ts
fuzz/: Cargo.toml
fuzz/corpus/control_jsonl/: unknown_type  valid_cancel  valid_exec  valid_output  valid_rollback_notify  valid_step_completed  valid_step_started
fuzz/corpus/mcp_jsonrpc/: malformed  notification  string_id  tools_call  valid_initialize  wrong_version
fuzz/corpus/path_normalize/: absolute_inside  deep_traversal  dot_components  dot_dot_within  mixed_traversal  windows_separators
fuzz/corpus/stdio_json/: agent_execute  fs_list  fs_read  missing_field  missing_request_id  session_start  session_status  session_stop  undo_history  undo_rollback  unknown_type
fuzz/corpus/undo_manifest/: minimal  unprotected  valid_manifest
fuzz/fuzz_targets/: control_jsonl.rs  mcp_jsonrpc.rs  path_normalize.rs  stdio_json.rs  undo_manifest.rs
guest/: Dockerfile  Dockerfile.tools  init.sh
xtask/: Cargo.toml
xtask/src/: main.rs
