[workspace]
resolver = "3"
members = [
    "crates/common",
    "crates/control",
    "crates/interceptor",
    "crates/mcp",
    "crates/stdio",
    "crates/test-support",
    "crates/e2e-tests",
    "crates/sandbox",
    "crates/shim",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
blake3 = "1"
filetime = "0.2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
xattr = "1"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "io-util"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
which = "7"
