[package]
name = "codeagent-e2e-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "io-util",
    "process",
] }

[dev-dependencies]
codeagent-test-support = { path = "../test-support" }
tempfile = { workspace = true }
