[package]
name = "codeagent-interceptor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
filetime = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }
chrono = { workspace = true }
codeagent-common = { path = "../common" }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = { workspace = true }

[dev-dependencies]
codeagent-test-support = { path = "../test-support" }
tempfile = { workspace = true }
proptest = { workspace = true }
