[package]
name = "codeagent-p9"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
codeagent-common = { path = "../common" }
codeagent-interceptor = { path = "../interceptor" }
codeagent-control = { path = "../control" }

[dev-dependencies]
codeagent-test-support = { path = "../test-support" }
tempfile = { workspace = true }
