[package]
name = "codeagent-sandbox"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "io-std", "process", "net", "fs"] }
chrono = { workspace = true }
which = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
tray-icon = "0.21"

codeagent-common = { path = "../common" }
codeagent-interceptor = { path = "../interceptor" }
codeagent-control = { path = "../control" }
codeagent-stdio = { path = "../stdio" }
codeagent-mcp = { path = "../mcp" }

[target.'cfg(unix)'.dependencies]
codeagent-virtiofs-backend = { path = "../virtiofs-backend" }
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
codeagent-p9 = { path = "../p9" }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
codeagent-test-support = { path = "../test-support" }
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "test-util"] }
