[package]
name = "codeagent-stdio"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "io-util"] }
chrono = { workspace = true }
codeagent-common = { path = "../common" }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "test-util", "io-util"] }
