[package]
name = "codeagent-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3 = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
codeagent-common = { path = "../common" }

[target.'cfg(target_os = "linux")'.dependencies]
xattr = { workspace = true }
