[package]
name = "vmm-sys-util"
version = "0.12.1"
edition = "2021"
license = "BSD-3-Clause"
description = "Fork of vmm-sys-util with macOS support for epoll, eventfd, sock_ctrl_msg"
repository = "https://github.com/rust-vmm/vmm-sys-util"

[dependencies]
libc = "0.2.39"
serde = { version = "1.0.27", optional = true }
serde_derive = { version = "1.0.27", optional = true }

[target.'cfg(unix)'.dependencies]
bitflags = "1.0"

[dev-dependencies]
serde_json = "1.0.9"

[features]
with-serde = ["serde", "serde_derive"]
