[package]
name = "codeagent-desktop"
version = "0.1.0"
edition = "2021"
description = "Code Agent Desktop — configuration and launcher GUI"
license = "MIT OR Apache-2.0"
publish = false

[lib]
name = "codeagent_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "codeagent-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
which = "7"
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
